--- a/app/src/main/res/layout/list_warranty.xml
+++ b/app/src/main/res/layout/list_warranty.xml
@@ -76,8 +76,7 @@
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/iv_icon"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_chainStyle="packed"
-                tools:ignore="HardcodedText" />
+                app:layout_constraintVertical_chainStyle="packed" />
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/tv_expiry_date"
@@ -96,8 +95,7 @@
                 app:layout_constraintEnd_toStartOf="@+id/tv_category"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/iv_icon"
-                app:layout_constraintTop_toBottomOf="@+id/tv_title"
-                tools:ignore="HardcodedText" />
+                app:layout_constraintTop_toBottomOf="@+id/tv_title" />
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/tv_status"
