--- a/app/src/main/res/layout/activity_landing.xml
+++ b/app/src/main/res/layout/activity_landing.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.landingactivity.LandingActivity">
+    tools:context=".ui.landing.LandingActivity">
 
     <ImageView
         android:id="@+id/iv_header"
