--- a/app/src/main/res/layout/fragment_warranties.xml
+++ b/app/src/main/res/layout/fragment_warranties.xml
@@ -105,7 +105,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:clipToPadding="false"
-        android:overScrollMode="never"
+        android:overScrollMode="ifContentScrolls"
         android:paddingTop="4dp"
         android:paddingBottom="60dp"
         android:scrollbars="none"
