--- a/app/src/main/res/layout/fragment_warranty_details.xml
+++ b/app/src/main/res/layout/fragment_warranty_details.xml
@@ -35,7 +35,7 @@
         android:layout_height="0dp"
         android:fillViewport="true"
         android:orientation="vertical"
-        android:overScrollMode="never"
+        android:overScrollMode="ifContentScrolls"
         android:scrollbars="none"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
