--- a/app/src/main/res/layout/fragment_warranties.xml
+++ b/app/src/main/res/layout/fragment_warranties.xml
@@ -100,14 +100,16 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_network_error"
         app:layout_constraintVertical_bias="0.5" />
 
+    <!--56dp bottom padding/margin for bottom appbar-->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginBottom="20dp"
         android:clipToPadding="false"
         android:overScrollMode="ifContentScrolls"
         android:paddingTop="4dp"
-        android:paddingBottom="60dp"
+        android:paddingBottom="40dp"
         android:scrollbars="none"
         android:visibility="gone"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
