--- a/app/src/main/res/layout/fragment_forgot_pw_sent.xml
+++ b/app/src/main/res/layout/fragment_forgot_pw_sent.xml
@@ -83,7 +83,7 @@
 
         <com.google.android.material.progressindicator.CircularProgressIndicator
             android:id="@+id/cpi_resend"
-            style="@style/Theme.WarrantyRoster.LoadingProgressBar.Button"
+            style="@style/Theme.WarrantyRoster.LoadingProgressBar.TextButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="4dp"
