--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="black">#000000</color>
     <color name="navyBlue">#00144F</color>
     <color name="blue">#1C53F4</color>
+    <color name="skyBlue">#DEF4FD</color>
     <color name="green">#00BD62</color>
     <color name="red">#FF3442</color>
     <color name="orange">#FF9100</color>
