--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -309,7 +309,8 @@
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:animateLayoutChanges="true">
 
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:id="@+id/cl_settings_language"
@@ -518,26 +519,33 @@
                         android:layout_width="0dp"
                         android:layout_height="1dp"
                         android:background="@color/grayLight"
+                        android:visibility="gone"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/cl_settings_privacy_policy" />
 
-                    <FrameLayout
-                        android:id="@+id/fl_ad_container"
+                    <RelativeLayout
+                        android:id="@+id/fl_ad_container_adcolony"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:visibility="gone"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.5"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/divider_settings_third" />
 
-                    <androidx.constraintlayout.widget.Group
-                        android:id="@+id/group_ad"
-                        android:layout_width="wrap_content"
+                    <FrameLayout
+                        android:id="@+id/fl_ad_container_tapsell"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:visibility="gone"
-                        app:constraint_referenced_ids="divider_settings_third,fl_ad_container" />
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.5"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/divider_settings_third" />
 
                     <!--TODO remove after adding change language feature-->
                     <androidx.constraintlayout.widget.Group
