Add Donate Button in Settings Page

--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -459,7 +459,7 @@
                         app:layout_constraintTop_toBottomOf="@+id/cl_settings_theme" />
 
                     <androidx.constraintlayout.widget.ConstraintLayout
-                        android:id="@+id/cl_settings_privacy_policy"
+                        android:id="@+id/cl_settings_donate"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:background="?attr/selectableItemBackground"
@@ -469,6 +469,72 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/divider_settings_second">
+
+                        <com.google.android.material.imageview.ShapeableImageView
+                            android:id="@+id/iv_settings_donate"
+                            android:layout_width="26dp"
+                            android:layout_height="26dp"
+                            android:layout_marginStart="12dp"
+                            android:background="@color/navyBlue10"
+                            android:src="@drawable/ic_settings_donate"
+                            app:contentPadding="4dp"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:shapeAppearance="@style/Theme.WarrantyRoster.ImageViewShapeAppearance.Settings" />
+
+                        <com.google.android.material.textview.MaterialTextView
+                            android:id="@+id/tv_settings_donate"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginHorizontal="12dp"
+                            android:ellipsize="end"
+                            android:fontFamily="@font/nunito_semi_bold"
+                            android:gravity="center_vertical|start"
+                            android:maxLines="1"
+                            android:text="@string/settings_text_settings_donate"
+                            android:textAlignment="gravity"
+                            android:textColor="@color/black"
+                            android:textSize="16sp"
+                            app:layout_constraintBottom_toBottomOf="@+id/iv_settings_donate"
+                            app:layout_constraintEnd_toStartOf="@+id/iv_settings_donate_arrow"
+                            app:layout_constraintStart_toEndOf="@+id/iv_settings_donate"
+                            app:layout_constraintTop_toTopOf="@+id/iv_settings_donate"
+                            app:layout_constraintVertical_bias="0.5" />
+
+                        <com.google.android.material.imageview.ShapeableImageView
+                            android:id="@+id/iv_settings_donate_arrow"
+                            android:layout_width="18dp"
+                            android:layout_height="18dp"
+                            android:layout_marginEnd="12dp"
+                            android:src="@drawable/ic_settings_arrow"
+                            app:layout_constraintBottom_toBottomOf="@+id/iv_settings_donate"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toTopOf="@+id/iv_settings_donate"
+                            app:layout_constraintVertical_bias="0.5" />
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+                    <View
+                        android:id="@+id/divider_settings_third"
+                        android:layout_width="0dp"
+                        android:layout_height="1dp"
+                        android:background="@color/grayLight"
+                        android:visibility="gone"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/cl_settings_donate" />
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:id="@+id/cl_settings_privacy_policy"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:background="?attr/selectableItemBackground"
+                        android:clickable="true"
+                        android:focusable="true"
+                        android:paddingVertical="12dp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/divider_settings_third">
 
                         <com.google.android.material.imageview.ShapeableImageView
                             android:id="@+id/iv_settings_privacy_policy"
@@ -515,7 +581,7 @@
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
                     <View
-                        android:id="@+id/divider_settings_third"
+                        android:id="@+id/divider_settings_fourth"
                         android:layout_width="0dp"
                         android:layout_height="1dp"
                         android:background="@color/grayLight"
@@ -534,7 +600,7 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.5"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/divider_settings_third" />
+                        app:layout_constraintTop_toBottomOf="@+id/divider_settings_fourth" />
 
                     <FrameLayout
                         android:id="@+id/fl_ad_container_tapsell"
@@ -545,7 +611,7 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.5"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/divider_settings_third" />
+                        app:layout_constraintTop_toBottomOf="@+id/divider_settings_fourth" />
 
                     <!--TODO remove after adding change language feature-->
                     <androidx.constraintlayout.widget.Group
