--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -36,7 +36,7 @@
     </style>
 
     <style name="Theme.WarrantyRoster.Snackbar.TextView" parent="Widget.MaterialComponents.Snackbar.TextView">
-        <item name="android:textColor">@color/white</item>
+        <item name="android:textColor">@color/whiteConstant</item>
         <item name="android:fontFamily">@font/nunito_semi_bold</item>
     </style>
 
