Improved Dialog Button Color

--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -9,6 +9,7 @@
     <color name="navyBlue">#DEF4FD</color>
     <color name="blue">#1C53F4</color>
     <color name="skyBlue">#01040F</color>
+    <color name="dialogButton">#0095E3</color>
     <color name="green">#00BD62</color>
     <color name="red">#FF3442</color>
     <color name="orange">#FF9100</color>
