--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -272,7 +272,7 @@
 
     <style name="Theme.WarrantyRoster.AlertDialog.PositiveButton" parent="Widget.MaterialComponents.Button.TextButton.Dialog">
         <item name="shapeAppearance">@style/Theme.WarrantyRoster.TextButton.Appearance</item>
-        <item name="android:textColor">@color/blue</item>
+        <item name="android:textColor">@color/dialogButton</item>
         <item name="android:textSize">14sp</item>
         <item name="android:fontFamily">@font/nunito_bold</item>
         <item name="textAllCaps">true</item>
@@ -286,7 +286,7 @@
 
     <style name="Theme.WarrantyRoster.AlertDialog.NegativeButton" parent="Widget.MaterialComponents.Button.TextButton.Dialog">
         <item name="shapeAppearance">@style/Theme.WarrantyRoster.TextButton.Appearance</item>
-        <item name="android:textColor">@color/blue</item>
+        <item name="android:textColor">@color/dialogButton</item>
         <item name="android:textSize">14sp</item>
         <item name="android:fontFamily">@font/nunito_bold</item>
         <item name="textAllCaps">true</item>
